[package]
name = "novault"
version = "1.0.0"
edition = "2024"
description = "An encrypted store for notes"
license = "LICENSE.md"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["stream"] }
anyhow = "1.0.100"
argon2 = "0.5.3"
atomicwrites = "0.4.4"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.53", features = ["derive"] }
colorize = "0.1.0"
crossterm = "0.29.0"
hex = "0.4.3"
ignore = "0.4.25"
rand = "0.9.2"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
walkdir = "2.5.0"
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
zeroize = { version = "1.8.2", features = ["derive"] }
zip = "7.0.0"
